# Bitcoin-timeseries-analysis

./: Base_Dados_economia_borracha.csv  projeto_economia.ipynb  pyproject.toml  serie temporal mercado financeiro.ipynb
