[tool.poetry]
name = "serie temporal financeiro -data viking"
version = "0.1.0"
description = ""
authors = ["waltergonzaga <walterbiel1237@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
