[tool.poetry]
name = "serie temporal financeiro -data viking"
version = "0.1.0"
description = ""
authors = ["waltergonzaga <walterbiel1237@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
yfinance = "^0.2.41"
plotly = "^5.23.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
